--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <style>
   body{
-    background: 555.jpg.jpg no-repeat;
+    background: url(555.jpg.jpg) no-repeat;
     -moz-background-size: 100%;
     -webkit-background-size: 100%;
     -o-background-size: 100%;
