--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=ru>
   <head>
-    <meta charset="utf-8" name="keywords" content="Pobeda nad coronavirusom">
+    <meta charset="utf-8">
     <title>
 
       ОРВИ и COVID-19
